--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -6,11 +5,14 @@
 
 body {
     font-family: 'Ubuntu', sans-serif;
+    background-color: #FDB827;
+    color: #ffffff;
 }
 
 .Presentacion {
     text-align: center;
     padding: 30px;
+    background-color: #21209C;
 }
 
 #presentacion {
@@ -32,15 +34,16 @@ h3 {
     font-size: 20px;
     border-radius: 15px;
     padding: 20px;
-    background-color: #000;
-    color: #fff;
+    background-color: #20205a;
+    color: #ffffff;
     transition: 300ms ease-in-out;
     overflow: hidden;
-    border: solid 1px #000;
+    border: transparent 1px;
+    cursor: pointer;
 }
 
 #contact:hover {
-    background-color: #fff;
-    color: #000;
+    background-color: #FDB827;
+    font-weight: 600;
 }
 
